<resources>
    <string name="app_name">MOKA</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_login">Welcome Back,</string>
    <string name="message_login">Login now to continue.</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="Register">Register</string>
    <string name="message_register_link">Don\'t have an account?</string>
    <string name="register">Register</string>
    <string name="input_email">Input Email</string>
    <string name="invalid_email">Your email is invailid</string>
    <string name="name_required">Input your name</string>
    <string name="input_pass">Input Your Password</string>
    <string name="pass_length">Password must be at least 8 characters</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="wake_up">Wake Up !</string>
    <string name="message_delete">Delete this note?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="login_google">Login with Google</string>
    <string name="or">OR</string>
    <string name="email_example">example@gmail.com</string>
    <string name="name">Name</string>
    <string name="name_example">Name example</string>
    <string name="title_register">Create a new account</string>
    <string name="message_login_link">Already have an account?</string>
    <string name="title_hint">Title</string>
    <string name="description_hint">Description</string>
    <string name="due_date">Due date</string>
    <string name="delete_task">Delete</string>
    <string name="done_task">Done</string>
    <string name="detail_task">Detail Task</string>
    <string name="start">Start</string>
    <string name="_00">00</string>
    <string name="colon">:</string>
    <string name="focus_session">Focus</string>
    <string name="break_session">Break</string>
    <string name="music">Music</string>
    <string name="current_task">Current task</string>
    <string name="back">Back</string>
    <string name="edit">Edit</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Task">Task</string>
    <string name="History_Task">History_Task</string>
    <string name="switch_camera">Switch Camera</string>
    <string name="default_web_client_id">default_web_client_id</string>
    <string name="ok_button">Oke\t\t\t</string>
    <string name="error_title">Error</string>
    <string name="incomplete_data_message">Data Belum Lengkap</string>
    <string name="registration_failed_message">Gagal Login\n</string>
</resources>